# rust-template

./: .gitignore  Cargo.toml  README.md  deny.toml
githooks/: commit-msg  pre-commit
src/: main.rs
